tests/fail/08_recursive_struct.lang
структура А {
    А поле;
}

функция Начало() : целое {
    вернуть 0;
}
